cmake_minimum_required(VERSION 3.31.3)
project(Auswahlen VERSION 0.1.0 LANGUAGES CXX CUDA)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_CXX_FLAGS_RELEASE "/MD")
set(CMAKE_CXX_FLAGS_DEBUG "/MDd")

set(CMAKE_CXX_FLAGS_RELEASE "/D GLEW_STATIC")
set(CMAKE_CXX_FLAGS_DEBUG "/D GLEW_STATIC")

add_subdirectory(source)